--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@swc/core": "^1.10.1",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.2",
+    "@types/sinon": "^17.0.3",
     "better-sqlite3": "^11.7.0",
     "c8": "^10.1.3",
     "copyfiles": "^2.4.1",
@@ -91,6 +92,7 @@
     "flydrive": "^1.1.0",
     "luxon": "^3.5.0",
     "prettier": "^3.4.2",
+    "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "vitepress": "^1.5.0"
