--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@poppinss/defer": "^1.1.1",
+    "blurhash": "^2.0.5",
     "exifreader": "^4.26.0",
     "file-type": "^19.6.0",
     "mime-types": "^2.1.35"
@@ -94,6 +95,7 @@
     "flydrive": "^1.1.0",
     "luxon": "^3.5.0",
     "prettier": "^3.4.2",
+    "sharp": "^0.33.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vitepress": "^1.5.0"
