--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "luxon": "^3.5.0",
     "prettier": "^3.4.2",
     "sharp": "^0.33.5",
+    "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vitepress": "^1.5.0"
