--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "tag": "beta"
+    "tag": "latest"
   },
   "volta": {
     "node": "20.17.0"
