--- a/package.json
+++ b/package.json
@@ -114,8 +114,7 @@
     ]
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "latest"
+    "access": "public"
   },
   "volta": {
     "node": "20.17.0"
