--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@poppinss/defer": "^1.1.1",
     "blurhash": "^2.0.5",
+    "execa": "^9.6.0",
     "exifreader": "^4.26.0",
     "file-type": "^19.6.0",
     "mime-types": "^2.1.35"
