--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jrmc/adonis-attachment",
-  "version": "4.0.1",
+  "version": "5.0.0-beta.1",
   "type": "module",
   "description": "Turn any field on your Lucid model to an attachment data type",
   "engines": {
