--- a/package.json
+++ b/package.json
@@ -105,7 +105,13 @@
   "peerDependencies": {
     "@adonisjs/core": "^6.12.1",
     "@adonisjs/drive": "^3.2.0",
-    "@adonisjs/lucid": "^20.6.0 || ^21.0.0"
+    "@adonisjs/lucid": "^20.6.0 || ^21.0.0",
+    "sharp": "^0.33.0"
+  },
+  "peerDependenciesMeta": {
+    "sharp": {
+      "optional": true
+    }
   },
   "prettier": "@adonisjs/prettier-config",
   "c8": {
