chore: beta tag

--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "tag": "latest"
+    "tag": "beta"
   },
   "volta": {
     "node": "20.17.0"
