--- a/package.json
+++ b/package.json
@@ -105,10 +105,10 @@
     "vitepress": "^1.6.4"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.12.1 || ^7.0.0",
-    "@adonisjs/drive": "^3.2.0 || ^4.0.0",
+    "@adonisjs/core": "^6.12.1 || ^7.0.0-next || ^7.0.0",
+    "@adonisjs/drive": "^3.2.0 || ^4.0.0-next || ^4.0.0",
     "@adonisjs/lock": "^1.1.1 || ^2.0.0",
-    "@adonisjs/lucid": "^20.6.0 || ^21.0.0 || ^22.0.0",
+    "@adonisjs/lucid": "^20.6.0 || ^21.0.0 || ^22.0.0-next || ^22.0.0",
     "sharp": "^0.34.0"
   },
   "peerDependenciesMeta": {
